# django-starter-mazer-template

./: .gitignore  Makefile  README.md  pyproject.toml
src/: asgi.py  settings.py  urls.py  wsgi.py
static/vendors/mazer/extensions/apexcharts/: apexcharts.js
static/vendors/mazer/extensions/choices.js/public/types/src/scripts/lib/: utils.d.ts  utils.d.ts.map  utils.test.d.ts.map
static/vendors/mazer/extensions/feather-icons/: feather.js
static/vendors/mazer/extensions/jsvectormap/js/: jsvectormap.js
static/vendors/mazer/extensions/rater-js/: .npmignore  .travis.yml  README.md  bower.json  index.d.ts
static/vendors/mazer/extensions/rater-js/example/: index.html  index.js
static/vendors/mazer/extensions/rater-js/lib/: rater-js.js  style.css
static/vendors/mazer/extensions/rater-js/test/: test.js
templates/: base.html  dashboard.html  sidebar.html
templates/assets/: css.html  js.html
