[tool.poetry]
name = "django-starter-mazer-template"
version = "0.1.0"
description = ""
authors = ["Eby <eby.sofyan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.3"
django = "4.2.1"
mysqlclient = "^2.1.1"
django-admin-interface = "^0.26.0"
django-import-export = "^3.2.0"
django-underconstruction = "^0.1.2"
django-extensions = "^3.2.1"
djangorestframework = "^3.14.0"
markdown = "^3.4.3"
django-filter = "^23.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
pytest = "^7.3.1"
djlint = "^1.27.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
profile="django"

[tool.flake8]
max-local-variables = 9
max-line-complexity = 20
max-cognitive-score = 30
max-cognitive-average = 10
show-source = "true"
max-line-length = 100
max-returns = 2
max-arguments = 4
max-imports = 16
per-file-ignores = "tests/*.py: S101"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
include_trailing_comma = "true"
use_parentheses = "true"
multi_line_output = 3
